<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_scores"
            android:icon="@mipmap/scores_icon"
            android:title="@string/menu_scores" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@mipmap/ic_menu_feedback"
                android:title="@string/menu_feedback" />
        </menu>
    </item>
    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
