<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@mipmap/ic_menu_home"
            android:title="@string/menu_home"
            android:id="@+id/nav_home" />
        <item
            android:icon="@mipmap/ic_menu_about"
            android:title="@string/menu_about"
            android:id="@+id/nav_about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_menu_settings"
            android:title="@string/menu_settings" />

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@mipmap/ic_menu_feedback"
                android:title="@string/menu_feedback" />
        </menu>
    </item>
</group>
</menu>
