<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.james.science.AboutActivity"
    tools:showIn="@layout/app_bar_about"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/aboutLinLayout">

        <ImageView
            android:contentDescription="@string/about_android_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/androidImageView"
            android:layout_marginBottom="5dp" />

        <TextView
            android:text="@string/about_android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/androidTextView"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/about_app_version_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/versionTextView"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="16sp"
            android:layout_marginBottom="20dp" />

        <ImageView
            android:contentDescription="@string/about_androidstudio_description"
            android:id="@+id/asImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_studioandroid"
            android:layout_marginBottom="5dp" />

        <TextView
            android:text="@string/about_androidstudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/asTextView"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp" />

        <ImageView
            android:contentDescription="@string/about_student_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_uoslogo"
            android:id="@+id/uosImageView"
            android:layout_marginBottom="5dp" />

        <TextView
            android:text="@string/about_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uosTextView"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginBottom="20dp" />
    </LinearLayout>
</RelativeLayout>
