<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mosquito_questions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.james.science.MosquitoFirstQuestionActivity"
    android:background="@color/white">

    <TextView
        android:text="@string/quiz_question_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/mosQuestionOneText"
        android:textStyle="normal|bold"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:text="@string/quiz_first_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mosQuestionOneText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/mosFirstQuestion"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mosFirstQuestion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:id="@+id/answerGroup">

        <Button
            android:text="@string/quiz_first_700m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sevenButton"
            android:background="@color/orange"
            android:layout_marginBottom="15dp" />

        <Button
            android:text="@string/quiz_first_200m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/twoButton"
            android:background="@color/purple"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp" />

        <Button
            android:text="@string/quiz_first_450m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"
            android:id="@+id/fourButton" />

        <Button
            android:text="@string/quiz_first_800k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eightButton"
            android:background="@color/lightBlue" />
    </LinearLayout>
</RelativeLayout>
