<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mosquito_fourth_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.james.science.MosquitoFourthQuestionActivity"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/fourthLayout">

        <TextView
            android:text="@string/quiz_question_fourth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionFour"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/quiz_fourth_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionFourText"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp" />

        <TextView
            android:text="@string/quiz_four_answer_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerAText"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:text="@string/quiz_four_answer_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerBText"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:text="@string/quiz_four_answer_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerCText"
            android:layout_marginTop="7dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:text="@string/quiz_four_answer_six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerDText"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="7dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:text="@string/quiz_four_answer_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerHereText"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/answerInput" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fourProgress"
            android:progress="75"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white" />

        <Button
            android:text="@string/quiz_fourth_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fourthContBtn"
            android:background="@color/green"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
