<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mosquito_second_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.james.science.MosquitoSecondQuestionActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/quiz_question_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/mosQuestionTwoText"
            android:textStyle="normal|bold"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:text="@string/quiz_second_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mosQuestionTwoText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:id="@+id/mosSecondQuestion"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:text="@string/quiz_second_blood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:id="@+id/bloodBox"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp" />

        <CheckBox
            android:text="@string/quiz_second_pregnancy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:id="@+id/pregnancyBox"
            android:layout_marginBottom="10dp"
            android:textSize="18sp" />

        <CheckBox
            android:text="@string/quiz_second_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:id="@+id/sexBox"
            android:layout_marginBottom="10dp"
            android:textSize="18sp" />

        <CheckBox
            android:text="@string/quiz_second_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:id="@+id/noneBox"
            android:layout_marginBottom="50dp"
            android:textSize="18sp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/qTwoProgress"
            android:layout_marginBottom="10dp"
            android:max="100"
            android:progress="25"
            tools:visibility="visible" />

        <Button
            android:text="@string/feedback_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/qTwoSubmitButton"
            android:background="@color/green"
            android:textColor="@color/white" />
    </LinearLayout>


</RelativeLayout>
