<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mosquito_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.james.science.MosquitoQuizActivity"
    android:background="@color/white">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/mosGamePageOneLayout">


        <TextView
            android:text="@string/mosquitoGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameTitleTextView"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="normal|bold|italic" />

        <TextView
            android:text="@string/settings_mosquito_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameInfoTextView"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="100dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonGroup">

            <Button
                android:text="@string/quiz_home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:id="@+id/homeButton"
                android:textColor="@color/white"
                android:background="@color/red" />

            <Button
                android:text="@string/quiz_continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:id="@+id/continueButton"
                android:background="@color/green"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
