<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.james.science.MainActivity"
    android:background="@android:color/background_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/mainLinLayout">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextView"
            android:textSize="40sp"
            android:textStyle="normal|bold|italic"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_marginBottom="38dp" />

        <TextView
            android:text="@string/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextView"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameInput"
            android:layout_marginBottom="15dp" />

        <TextView
            android:text="@string/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameTextView"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameInput"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/startBtn"
            android:text="@string/startButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@color/green" />
    </LinearLayout>
</RelativeLayout>
