<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.james.science.FeedbackActivity"
    tools:showIn="@layout/app_bar_feedback">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/feedback_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoTextView"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textColor="@color/black" />

        <TextView
            android:text="@string/feedback_games_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gamesRatingTextView"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="8dp" />

        <RatingBar
            android:id="@+id/gamesRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <TextView
            android:id="@+id/appRatingTextView"
            android:text="@string/feedback_app_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp" />

        <RatingBar
            android:id="@+id/appRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <Button
            android:text="@string/feedback_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@color/green"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/feedbackListView" />

    </LinearLayout>

</RelativeLayout>
